[package]
name = "plus-ou-moins"
version = "2.0.0"
description = "Un petit jeu un rust"
authors = ["Woomy4680-exe <matzar1808@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
console = "0.14.0"

[profile.release]
overflow-checks = false